NEWS - OpenPrinting CUPS Filters v1.27.5 - 2020-06-05
-----------------------------------------------------

CHANGES IN V2.0.0

	- libppd, libcupsfilters, bannertopdf, texttopdf: Added
	  support for Sharp-proprietary "ARDuplex" PPD option name for
	  double-sided printing.
	- libppd: Move the functions ppdPwgUnppdizeName(),
	  ppdPwgPpdizeName(), and ppdPwgPpdizeResolution() into the
	  public API.
	- libppd: In the ppdPwgUnppdizeName() allow to supply NULL as
	  the list of characters to replace by dashes. Then all non-
	  alpha-numeric characters get replaced, to result in IPP-
	  conforming keyword strings.
	- libppd: Correct conversion between PPD option names and IPP
	  attribute names, duplicate dashes like "Tray-2" -> "tray--2"
	  (OpenPrinting CUPS pull request #23).
	- cups-browsed: Silenced compiler warning.
	- foomatic-rip: Fix infinite loop and input from file on raw
	  printing (Pull request #318).
	- libcupsfilters: In cupsRasterParseIPPOptions() (called from
	  filters used without PPD file) improved understanding of
	  color mode options. Options "output-mode", "OutputMode",
	  "print-color-mode", and choices "auto", "color",
	  "auto-monochrome", "process-monochrome", and "bi-level" are
	  supported now and default color mode is RGB 8-bit color and
	  not 1-bit grayscale.
	- libcupsfilters: Added filterPOpen() and filterPClose()
	  functions which similar to popen() and pclose() create a
	  file descriptor which either takes data to feed into a
	  filter function or provides data coming out of a filter
	  function.
	- libcupsfilters: Extended ieee1284NormalizeMakeAndModel() to
	  a universal function to clean up and normalize make/model
	  strings (also device IDs) to get human-readable,
	  machine-readable, or easily sortable make/model strings.
	- libcupsfilters: Added NULL check when removing ".Borderless"
	  suffixes from page size names (Issue #314).
	- libcupsfilters, parallel, test1284: Moved