@@ -3,6 +3,8 @@ NEWS - OpenPrinting CUPS Filters v1.27.5 - 2020-06-05
 
 CHANGES IN V2.0.0
 
+	- Build system: Added missing library dependencies to the
+	  filters to make parallel builds work (Issue #319).
 	- libppd, libcupsfilters, bannertopdf, texttopdf: Added
 	  support for Sharp-proprietary "ARDuplex" PPD option name for
 	  double-sided printing.
